# discord-task-notifier

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: fetchEvent.py  last_check.json  main.py  schedule_notify.py  sendMessage.py  test_fetch.py
